add more responsiveness

--- a/contents/main-body.html
+++ b/contents/main-body.html
@@ -131,6 +131,7 @@
 
   <!-- Project Section Start -->
   <div class="my_projects" id="my_projects">
+    <h4 class="stat-label">My Projects</h4>
     <div class="project_cards project-card-1">
       <!-- New Card Start -->
       <div class="cards">
@@ -305,10 +306,11 @@
         <h3 id="testimonial-heading">Testimonials</h3>
           <img src="../assets/img/adeyemi_buhari.jpg" alt="">
           <h3>Adeyemi Buhari<b style="font-size: small; white-space: nowrap;"> - Backend Developer</b></h3>
-          <p>Ayodele Samuel Adebayo is very passionate about technology. 
+          <br>
+          <p>"Ayodele Samuel Adebayo is very passionate about technology. 
             He is a determined software developer with the zeal of assisting the 
             community but frankly speaking If you don't get closer, 
-            you will not know the type of person he is.</p>
+            you will not know the type of person he is."</p>
           <p><br>A gem with countless qualities.</p>
         </div>
       </div>
@@ -318,6 +320,7 @@
         <div class="center testimony-card">
           <img src="../assets/img/israel_alagbe.jpg" alt="">
           <h3> Israel Alagbe -  <b style="font-size: small;">FullStack Developer</b></h3>
+          <br>
           <p>"Ayodele is a creative software developer, and a friend. 
             He is always willing to learn and improve his skills. 
             He'll be a great asset to any company he works with."
@@ -345,7 +348,7 @@
         <div class="center testimony-card">
           <img src="../assets/img/innocent-odeng.jpg" alt="">
           <h3> Odeh Innocent - <b style="font-size: small;">My Student</b></h3>
-          <p><br>You the best teacher a student could ever hope for! Thank you for all your hard work and dedication. Because of you I have come to love coding, you gave me strength I needed to take towards my dream of becoming a good programmer. I am so grateful you are my teacher, thank you for emboldening me 🙏🙏🙏</p></div>
+          <p><br>"You the best teacher a student could ever hope for! Thank you for all your hard work and dedication. Because of you I have come to love coding, you gave me strength I needed to take towards my dream of becoming a good programmer. I am so grateful you are my teacher, thank you for emboldening me 🙏🙏🙏"</p></div>
       </div>
     </div>
 
@@ -461,15 +464,15 @@
   <!-- Moments Section Articles -->
   <main class="moments" id="moment"> 
     <article>
-          <img src="../assets/img/moments/moment-1.jpg">
+          <img src="../assets/img/moments/moment-10.jpg">
           <br>
           <br>
-          <h3>1) Group Lead</h3>
+          <h3>1) Samuel</h3>
           <br>
-          <p>My Team mates and I during a brain challenge on problem solving, quick thinking, communication skill, and also how to make a suitable presentaton</p>
+          <p>A great photograph is one that fully expresses what one feels, in the deepest sense, about what is being photographed</p>
     </article>
     <article>    
-          <img src="../assets/img/moments/moment-6.jpg">
+          <img src="../assets/img/moments/moment-11.jpg">
           <h3>2) Some Are Short</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a diam lectus.</p> 
     </article>
@@ -488,12 +491,13 @@
           <img src="../assets/img/moments/moment-4.jpg">
           <br>
           <br>
-          <h3>4) Also, Why Are We Using Fake Content? Let's Make Some Real-ish Content.</h3>
+          <h3>4) Symbol</h3>
           <br>
-          <p>By using real content, we can see the variation inherent in what this site might present. And we can design for those real world needs.
+          <p>Representing Achievement during a lecture at the TIIDELab friday non-technical class</p>
     </article>
+
     <article>    
-          <img src="../assets/img/moments/moment-2.jpg">
+          <img src="../assets/img/moments/moment-9.jpg">
           <br>
           <br>
           <h3>5) Myself</h3>
@@ -503,9 +507,9 @@
           <p>Web Development Programme - 2020, Abuja.</p> 
     </article>
     <article>
-          <img src="../assets/img/moments/moment-6.jpg">
-          <h3>6) See how this layout is broken?</h3>
-          <p>That's because floats are really crap at handling layout. We've been using a screwdriver as a hammer. It sort of works, but badly.</p> 
+          <img src="../assets/img/moments/moment-11.jpg">
+          <h3>6) At Work and Connect</h3>
+          <p>Waiting for a non-technical class to begin at Abuja, I arrived too early.</p> 
     </article>
     <article>
           <img src="../assets/img/moments/moment-7.jpg">
@@ -517,8 +521,8 @@
     </article>
     <article>    
           <img src="../assets/img/moments/moment-3.jpg">
-          <h3>8) Several Kinds of Hammers</h3>
-          <p>Grid, Flexbox, Alignment, Shapes, .</p> 
+          <h3>8) Kachi and I</h3>
+          <p>Having a nice time with a backend developer during breakfast. I believe in strong networking</p> 
     </article>
     <article>
           <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/10558/P3-Egyptian_food_Koshary.jpg">
@@ -526,25 +530,25 @@
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a diam lectus. Sed sit amet ipsum mauris tindunt.</p> 
     </article>
     <article>
-          <img src="../assets/img/moments/moment-4.jpg">
-          <br>
-          <br>
-          <h3>10) Chatting with <br> <b>Mr. Solomon Chokor</b>( Developer)</h3>
-          <br>
-          <p>Having a chat with Mr. Solomon, our Frontend instructor/tutor </p>
+      <img src="../assets/img/moments/moment-1.jpg">
+      <br>
+      <br>
+      <h3>12) Group Lead</h3>
+      <br>
+      <p>My Team mates and I during a brain challenge on problem solving, quick thinking, communication skill, and also how to make a suitable presentaton</p>
     </article>
     <article>    
-          <img src="../assets/img/moments/moment-5.jpg">
-          <h3>11) Chatting with <br>Mr. Solomon <br> Frontend Developer</h3>
-          <p>Having a chat with Mr. Solomon, our Frontend instructor/tutor </p> 
+      <img src="../assets/img/moments/moment-5.jpg">
+      <h3>11) Chatting with <br>Mr. Solomon <br> Frontend Developer</h3>
+      <p>Having a chat with Mr. Solomon, our Frontend instructor/tutor </p> 
     </article>
     <article>
-          <img src="../assets/img/moments/moment-5.jpg">
+          <img src="../assets/img/moments/moment-12.jpg">
           <br>
           <br>
-          <h3>12) Size, Isn't That Magical!</h3>
+          <h3>10) In a group picture with fellow developer during a non-technical seminar</h3>
           <br>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a diam lectus. Sed sit amet ipsum mauris tindunt.</p> 
+          <p> we find it difficult to discuss outside coding until we started talking about open source projects. lolxxx</p>
     </article>
   </main>
   <!-- End of Moments Section -->
