--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+/>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="Author" content="Ayodele Samuel Adebayo">
@@ -37,8 +41,6 @@
     <div class="loader-section section-left"></div>
     <div class="loader-section section-right"></div>
   </div>
-  <!-- Goto Top Button -->
-  <button onclick="topFunction()" id="topBtn" title="Go to top">Scroll To Top</button>
   <!-- Content Start  -->
   <div class="container">
     <!-- Header Start -->
@@ -47,10 +49,10 @@
       <div class="menu-handler">
         <label class="hamburger-container">
           <input type='checkbox'>
-          <span class='menu'> <span class='hamburger'></span> </span>
-          <ul>
+          <div class='menu'  onclick="hidelinks()"> <span class='hamburger'></span> </div>
+          <ul id="links">
             <li> <a href='/index.html'>My Skills</a> </li>
-            <li> <a href='/main-body.html#my_projects'>Projects</a> </li>
+            <li> <a href='/main-body.html'>Achievements</a> </li>
             <li> <a href='/main-body.html#hire-me'>Hire Me</a> </li>
             <li> <a href='/main-body.html#testimonial'>Testimonial</a> </li>
             <li> <a href='/main-body.html#about'>About</a> </li>
@@ -63,20 +65,20 @@
           <p class="tiny tiny-c tiny-1 y">html</p>
           <p class="tiny tiny-right tiny-1 r">JavaScript</p>
           <p class="tiny tiny-left tiny-1 p">css</p>
-          <!-- l<<<< Landing Page Secton >>>>> -->
-          <h3>Ayodele Samuel Adebayo</h3>
-          <p>Junior Frontend Developer</p>
+          <!-- l<<<< Landing Page Section >>>>> -->
+          <h3 class="animate__animated animate__flipInX animate__delay-2s">Ayodele Samuel Adebayo</h3>
+          <p class="animate__animated animate__fadeInLeft animate__delay-3s">Junior Frontend Developer</p>
           <!-- My skill section -->
-          <p id='myskill'>Html, Css, JavaScript, React Js, Bootstrap, Git- Version Control, Python, Django</p>
+          <p id='myskill' class="animate__animated animate__fadeInRight animate__delay-3s">Html, Css, JavaScript, React Js, Bootstrap, Git- Version Control, Python, Django</p>
           <p class="tiny tiny-left tiny-1 g">Django</p>
-          <span>I help Companies Transform Their Businesses</span>
+          <!-- <span>I help Companies Transform Their Businesses</span> -->
         </section>
         <p class="tiny tiny-right tiny-2 y">React js</p>
         <section class="section-two">
           <strong>Currently Fellow at -TIIDELab INITIATIVE </strong>
           <hr class="hr">
-          <a href="/main-body.htmla#stat" class="stat-scroll-down-">
-            <i class="fa fa-chevron-down" id="stat-link" aria-hidden="true"></i>
+          <a href="/main-body.html" class="stat-scroll-down-">
+            <i class="fa fa-chevron-down animate__animated animate__shakeY animate__delay-4s animate__infinite	infinite animate__slow	100s" id="stat-link" aria-hidden="true"></i>
           </a>
         </section>
       </div>
