--- a/contents/main-body.html
+++ b/contents/main-body.html
@@ -26,7 +26,16 @@
     <div class="loader-section section-right"></div>
   </div>
   <!-- Goto Top Button -->
-  <button onclick="topFunction()" id="topBtn" title="Go to top">Scroll To Top</button>
+  <div class="resume_pop">
+    <embed src="../assets/resume/Ayodele Samuel Adebayo.pdf"  width="100%" height="500px">
+    <!-- </embed> -->
+  </div>
+  <div id="topBtn">
+    <div id="button_container">
+      <button onclick="topFunction()" id="resume_btn" title="Go to top">My Resume</button>
+      <button onclick="topFunction()" id="top_btn" title="Go to top">Scroll To Top</button>
+    </div>
+  </div>
   
   <!-- Content Start  -->
   <div class="container">
