--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="Author" content="Ayodele Samuel Adebayo">
   <meta name="description" content="junior frontend developer, react js html css javacript portfolio">
+  <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,700;1,400&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/main.css">
   <link rel="stylesheet" href="assets/css/hamburger.css">
   <link rel="stylesheet" href="assets/css/m-q.css">
@@ -51,11 +52,23 @@
           <input type='checkbox'>
           <div class='menu'  onclick="hidelinks()"> <span class='hamburger'></span> </div>
           <ul id="links">
-            <li> <a href='/index.html'>My Skills</a> </li>
-            <li> <a href='/main-body.html'>Achievements</a> </li>
-            <li> <a href='/main-body.html#hire-me'>Hire Me</a> </li>
-            <li> <a href='/main-body.html#testimonial'>Testimonial</a> </li>
-            <li> <a href='/main-body.html#about'>About</a> </li>
+            <section class="all-links">
+              <section>
+                <li> <a href='https://github.com/unclebay143'><i class="fa fa-github"></i></a> </li>
+                <li> <a href='https://https://unclebigbay.hashnode.dev/'><img src="assets/img/hashnode.png" width="35px" height="35px"></a> </li>
+                <li> <a href='https://wa.link/9kwdss'><i class="fa fa-whatsapp"></i></a> </li>
+                <li> <a href='https://twitter.com/Ayodele29338919'><i class="fa fa-twitter"></i></a> </li>
+                <li> <a href='https://www.linkedin.com/in/ayodele-samuel-ayodele-55902819a/'><i class="fa fa-linkedin-square"></i></a> </li>
+              </section>
+              <section>
+                <li> <a href='contents/index.html'>My Skills</a> </li>
+                <li> <a href='contents/main-body.html'>Achievements</a> </li>
+                <li> <a href='contents/main-body.html#testimonial'>Testimonial</a> </li>
+                <li> <a href='contents/main-body.html#hire-me'>Hire Me</a> </li>
+                <li> <a href='contents/main-body.html#about'>About</a> </li>
+              </section>
+
+            </section>
           </ul>
         </label>
       </div>
@@ -69,15 +82,19 @@
           <h3 class="animate__animated animate__flipInX animate__delay-2s">Ayodele Samuel Adebayo</h3>
           <p class="animate__animated animate__fadeInLeft animate__delay-3s">Junior Frontend Developer</p>
           <!-- My skill section -->
-          <p id='myskill' class="animate__animated animate__fadeInRight animate__delay-3s">Html, Css, JavaScript, React Js, Bootstrap, Git- Version Control, Python, Django</p>
+          <p id='myskill' class="animate__animated animate__fadeInRight animate__delay-3s">Html, Css, JavaScript, Git- Version Control</p>
           <p class="tiny tiny-left tiny-1 g">Django</p>
           <!-- <span>I help Companies Transform Their Businesses</span> -->
         </section>
         <p class="tiny tiny-right tiny-2 y">React js</p>
         <section class="section-two">
+            <section class="badge">
+              <a href="https://certification.w3schools.com/w3certified.asp?email=unclebigbay@gmail.com">
+                <img src="/assets/img/w3certified_logo.png" alt="W3Schools Certified"/></a>
+            </section>
           <strong>Currently Fellow at -TIIDELab INITIATIVE </strong>
           <hr class="hr">
-          <a href="/main-body.html" class="stat-scroll-down-">
+          <a href="contents/main-body.html" class="stat-scroll-down-">
             <i class="fa fa-chevron-down animate__animated animate__shakeY animate__delay-4s animate__infinite	infinite animate__slow	100s" id="stat-link" aria-hidden="true"></i>
           </a>
         </section>
