fixed broken link

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <li> <a href='https://www.linkedin.com/in/ayodele-samuel-ayodele-55902819a/'><i class="fa fa-linkedin-square"></i></a> </li>
               </section>
               <section>
-                <li> <a href='contents/index.html'>My Skills</a> </li>
+                <li> <a href='index.html'>My Skills</a> </li>
                 <li> <a href='contents/main-body.html'>Achievements</a> </li>
                 <li> <a href='contents/main-body.html#testimonial'>Testimonial</a> </li>
                 <li> <a href='contents/main-body.html#hire-me'>Hire Me</a> </li>
