--- a/contents/main-body.html
+++ b/contents/main-body.html
@@ -546,11 +546,11 @@
           <h3>8) Kachi and I</h3>
           <p>Having a nice time with a backend developer during breakfast. I believe in strong networking</p> 
     </article>
-    <article>
+    <!-- <article>
           <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/10558/P3-Egyptian_food_Koshary.jpg">
           <h3>9) Size, Isn't That Magical!</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a diam lectus. Sed sit amet ipsum mauris tindunt.</p> 
-    </article>
+    </article> -->
     <article>
       <img src="../assets/img/moments/moment-1.jpg">
       <br>
